--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -146,7 +146,7 @@
         {{item}}
     </div>
 </div>
-<div fxLayout="column" fxLayoutAlign="center center" class="boxes">
+<!-- <div fxLayout="column" fxLayoutAlign="center center" class="boxes">
     <strong>Essential data for Application setting Statuses</strong>
     <div style="border-collapse:collapse;border-top-color: 1px solid grey;border-bottom-color: 1px solid lightgrey;">
         <div fxLayoutGap="30px" fxLayout="row wrap" fxLayoutAlign="space-around center">
@@ -167,4 +167,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
