--- a/src/app/modules/control/customerplans/customerplans.component.html
+++ b/src/app/modules/control/customerplans/customerplans.component.html
@@ -1,6 +1,6 @@
 <div style="display: flex;flex-direction: column;">
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Organisation Plan</strong></div>
+        <div><strong>My Plan</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
