student grade added

--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -62,7 +62,7 @@
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="Month">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Year month </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Month Year </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Month Year</mat-label>
