--- a/src/app/modules/misc/calendar/calendar.component.html
+++ b/src/app/modules/misc/calendar/calendar.component.html
@@ -85,7 +85,7 @@
   </div>
   
   <!-- Everything you see below is just for the demo, you don't need to include it in your app -->
-  
+<!--   
   <br /><br /><br />
   
   <h3>
@@ -195,5 +195,5 @@
         OK
       </button>
     </div>
-  </ng-template>
+  </ng-template> -->
   
