--- a/src/app/modules/misc/holiday/holiday.component.html
+++ b/src/app/modules/misc/holiday/holiday.component.html
@@ -99,9 +99,9 @@
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,20,100]"></mat-paginator>
         </div>
-        <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
+        <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
             ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on top">
             Popover on top
-        </button>
+        </button> -->
     </div>
 </div>
