--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -1,58 +1,54 @@
-<div>
-    <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Exams</strong></div>
-    </div>
-    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <!-- <alert></alert> -->
-    Until result released, result will not be available for public view. After result released, student exam status will be generated and 
-    marks can no longer be entered/edited for that examination.
-    <div style="padding: 15px;" fxLayout="row wrap">
-        <div style="width: 100%;">
-            <mat-table #table [dataSource]="dataSource">
-                <ng-container matColumnDef="ExamId">
-                    <mat-header-cell *matHeaderCellDef style="justify-content: left;">Id
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.ExamId}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="ExamName">
-                    <mat-header-cell *matHeaderCellDef>Exam Name
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.ExamName}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="StartDate">
-                    <mat-header-cell *matHeaderCellDef> Start Date </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <mat-label>Start Date</mat-label>
-                            <input [(ngModel)]="element.StartDate" 
-                            [value]="element.StartDate" 
-                            (dateChange)="onBlur(element)"
-                            matInput 
-                            [matDatepicker]="StartDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
-                            <mat-datepicker #StartDate></mat-datepicker>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="EndDate">
-                    <mat-header-cell *matHeaderCellDef> End Date </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <mat-label>End Date</mat-label>
-                            <input [value]="element.EndDate" [(ngModel)]="element.EndDate" 
-                            matInput [matDatepicker]="EndDate"
-                            (dateChange)="onBlur(element)"
-                            autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
-                            <mat-datepicker #EndDate></mat-datepicker>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <!-- <ng-container matColumnDef="CategoryId">
+<!-- <div> -->
+<div style="padding:15px 15px 10px 15px;">
+    <div><strong>Exams</strong></div>
+</div>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<!-- <alert></alert> -->
+Until result released, result will not be available for public view. After result released, student exam status will be
+generated and
+marks can no longer be entered/edited for that examination.
+<!-- <div style="padding: 15px;" fxLayout="row wrap"> -->
+    <div style="width: 100%;overflow: auto;">
+        <mat-table #table [dataSource]="dataSource">
+            <ng-container matColumnDef="ExamId">
+                <mat-header-cell *matHeaderCellDef>Id
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.ExamId}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ExamName">
+                <mat-header-cell *matHeaderCellDef>Exam Name
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.ExamName}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="StartDate">
+                <mat-header-cell *matHeaderCellDef> Start Date </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Start Date</mat-label>
+                        <input [(ngModel)]="element.StartDate" [value]="element.StartDate"
+                            (dateChange)="onBlur(element)" matInput [matDatepicker]="StartDate" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="StartDate"></mat-datepicker-toggle>
+                        <mat-datepicker #StartDate></mat-datepicker>
+                    </mat-form-field>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="EndDate">
+                <mat-header-cell *matHeaderCellDef> End Date </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field appearance="outline">
+                        <mat-label>End Date</mat-label>
+                        <input [value]="element.EndDate" [(ngModel)]="element.EndDate" matInput
+                            [matDatepicker]="EndDate" (dateChange)="onBlur(element)" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="EndDate"></mat-datepicker-toggle>
+                        <mat-datepicker #EndDate></mat-datepicker>
+                    </mat-form-field>
+                </mat-cell>
+            </ng-container>
+            <!-- <ng-container matColumnDef="CategoryId">
                     <mat-header-cell>Category</mat-header-cell>
                     <mat-cell>
                         <mat-form-field>
@@ -62,45 +58,46 @@
                         </mat-form-field>
                     </mat-cell>
                 </ng-container> -->
-                <ng-container matColumnDef="ReleaseResult">
-                    <mat-header-cell *matHeaderCellDef> Release Result </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateRelease(element,$event)"
-                            [checked]="element.ReleaseResult==1?true:false">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="ReleaseDate">
-                    <mat-header-cell *matHeaderCellDef>Release Date
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.ReleaseDate}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Active">
-                    <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
-                            [checked]="element.Active==1?true:false">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>
-                        <!-- <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
+            <ng-container matColumnDef="ReleaseResult">
+                <mat-header-cell *matHeaderCellDef> Release Result </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateRelease(element,$event)"
+                        [checked]="element.ReleaseResult==1?true:false">
+                    </mat-checkbox>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ReleaseDate">
+                <mat-header-cell *matHeaderCellDef>Release Date
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.ReleaseDate}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Active">
+                <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+                        [checked]="element.Active==1?true:false">
+                    </mat-checkbox>
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Action">
+                <mat-header-cell *matHeaderCellDef>
+                    <!-- <button [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="addnew()">
                             <mat-icon>add</mat-icon>
                         </button> -->
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-mini-fab (click)="UpdateOrSave(element)">
-                            <mat-icon>save</mat-icon>
-                        </button>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-            </mat-table>
-        </div>
-
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <button [disabled]="loading || Permission=='read' || !element.Action" matTooltip="save" mat-mini-fab
+                        (click)="UpdateOrSave(element)">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+        </mat-table>
     </div>
-</div>
+
+<!-- </div> -->
+<!-- </div> -->
