--- a/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
+++ b/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.html
@@ -29,7 +29,7 @@
             <mat-icon>copy_all</mat-icon>
         </button>
     </form>
-    <div class="example-container mat-elevation-z8">
+    <!-- <div class="example-container mat-elevation-z8"> -->
         <mat-table #table [dataSource]="dataSource" matSort>
 
             <ng-container matColumnDef="ClassSubject">
@@ -70,7 +70,11 @@
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="Active">
-                <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> 
+                    <mat-checkbox matTooltip="select all"
+                                (click)="$event.stopPropagation()" (change)="SelectAll($event)">
+                            </mat-checkbox>
+                </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element)"
                         [checked]="element.Active">
@@ -95,4 +99,4 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
     </div>
-</div>
+<!-- </div> -->
