--- a/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.scss
+++ b/src/app/modules/ClassSubject/student-subject-mark-comp/student-subject-mark-comp.component.scss
@@ -8,3 +8,15 @@ mat-form-field{
 button{
     margin-right:15px;
 }
+.mat-column-SubjectComponent,
+.mat-column-ClassSubject
+{
+    flex: 1 1 150px;
+}
+.mat-column-Action
+.mat-column-Active,
+.mat-column-FullMark,
+.mat-column-PassMark,
+.mat-column-Action{
+    flex: 1 1 100px;
+}
