--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -52,7 +52,7 @@
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         &nbsp;
-                        <button [disabled]="loading" matTooltip="Details" mat-mini-fab (click)="view(element)">
+                        <button style="margin-left: 15px;" [disabled]="loading" matTooltip="Details" mat-mini-fab (click)="view(element)">
                             <mat-icon>pageview</mat-icon>
                         </button>
                         &nbsp;
