--- a/src/app/modules/studentexam/exams/exams.component.scss
+++ b/src/app/modules/studentexam/exams/exams.component.scss
@@ -9,13 +9,20 @@ button {
 mat-cell:first-of-type {
     padding-left: 0px;
 }
+.mat-column-ReleaseDate{
+    justify-content: center;
+    flex:1 0 135px;
+}
 .mat-column-ExamName,
 .mat-column-StartDate,
-.mat-column-EndDate,
-.mat-column-ReleaseDate{
-    flex:1 1 130px;
+.mat-column-EndDate
+{
+    flex:1 0 135px;
 }
-.mat-column-Active,.mat-column-ReleaseResult,.mat-column-ExamId {
+.mat-column-Action,.mat-column-Active,.mat-column-ReleaseResult {
     justify-content: center;
-    flex:1 1 70px;
+    flex:1 0 100px;
+}
+.mat-column-ExamId{
+    flex:1 0 70px;
 }
