--- a/src/app/modules/studentexam/studentgrade/studentgrade.component.html
+++ b/src/app/modules/studentexam/studentgrade/studentgrade.component.html
@@ -4,71 +4,82 @@
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
-    <div style="padding: 15px;" fxLayout="row wrap">
+    <div style="padding: 15px;">
+        <div style="flex-direction: row;">
+        <form [formGroup]="searchForm">
+            <mat-form-field appearance="outline" [style.width.px]="200">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="searchClassId">
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                        {{item.ClassName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentGrade()">
+                <mat-icon>search</mat-icon>
+            </button>
+            </form>
+        </div>
         <div style="width: 100%;">
             <mat-table style="overflow: auto;min-width: 60vw;min-height: 60vh;" #table [dataSource]="dataSource">
-                <ng-container matColumnDef="EventId">
+                <ng-container matColumnDef="StudentGradeId">
                     <mat-header-cell *matHeaderCellDef>Id
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element.EventId}}
+                        {{element.StudentGradeId}}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="EventName">
-                    <mat-header-cell *matHeaderCellDef>Event
+                <ng-container matColumnDef="GradeName">
+                    <mat-header-cell *matHeaderCellDef>Grade
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.EventName"
-                                [(ngModel)]="element.EventName" [maxlength]="100">
+                            <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.GradeName"
+                                [(ngModel)]="element.GradeName" [maxlength]="50">
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="Description">
-                    <mat-header-cell *matHeaderCellDef>Description
+                <ng-container matColumnDef="Formula">
+                    <mat-header-cell *matHeaderCellDef>Formula
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <textarea matInput (blur)="onBlur(element)" [value]="element.Description"
-                                [(ngModel)]="element.Description" [maxlength]="1000"></textarea>
+                            <textarea matInput (blur)="onBlur(element)" [value]="element.Formula"
+                                [(ngModel)]="element.Formula" [maxlength]="256"></textarea>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="EventStartDate">
-                    <mat-header-cell *matHeaderCellDef> Start </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <input [value]="element.EventStartDate" matInput [(ngModel)]="element.EventStartDate"
-                                [ngxMatDatetimePicker]="EventStartDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="$any(EventStartDate)"></mat-datepicker-toggle>
-                            <ngx-mat-datetime-picker #EventStartDate [showSpinners]="true" [showSeconds]="false"
-                                [stepHour]="1" [stepMinute]="1" [stepSecond]="1" [touchUi]="false"
-                                [enableMeridian]="true">
-                            </ngx-mat-datetime-picker>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="EventEndDate">
-                    <mat-header-cell *matHeaderCellDef> End </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <input [value]="element.EventEndDate" [(ngModel)]="element.EventEndDate" matInput
-                                [ngxMatDatetimePicker]="EventEndDate" autocomplete="off">
-                            <mat-datepicker-toggle matSuffix [for]="$any(EventEndDate)"></mat-datepicker-toggle>
-                            <ngx-mat-datetime-picker #EventEndDate [showSpinners]="true" [showSeconds]="false"
-                                [stepHour]="1" [stepMinute]="1" [stepSecond]="1" [touchUi]="false"
-                                [enableMeridian]="true">
-                            </ngx-mat-datetime-picker>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Venue">
-                    <mat-header-cell *matHeaderCellDef>Venue
+                <ng-container matColumnDef="Sequence">
+                    <mat-header-cell *matHeaderCellDef>Sequence
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.Venue"
-                                [(ngModel)]="element.Venue" [maxlength]="256">
+                            <input autocomplete="Off" matInput type="number" (blur)="onBlur(element)" [value]="element.Sequence"
+                                [(ngModel)]="element.Sequence" [max]="30">
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="GradeTypeId">
+                    <mat-header-cell *matHeaderCellDef>Grade Type
+                    </mat-header-cell>
+                    <mat-cell style="display: flex;" *matCellDef="let element">
+                        <mat-form-field appearance="outline">
+                            <mat-select [value]="element.GradeTypeId" [(ngModel)]="element.GradeTypeId">
+                                <mat-option *ngFor="let item of StudentGradeTypes" [value]="item.MasterDataId">
+                                    {{item.MasterDataName}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="ClassId">
+                    <mat-header-cell *matHeaderCellDef>Class
+                    </mat-header-cell>
+                    <mat-cell style="display: flex;" *matCellDef="let element">
+                        <mat-form-field appearance="outline">
+                            <mat-select [value]="element.ClassId" [(ngModel)]="element.ClassId">
+                                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                                    {{item.ClassName}}</mat-option>
+                            </mat-select>
                         </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -101,9 +112,9 @@
             </mat-table>
             <mat-paginator [pageSizeOptions]="[10,20,100]"></mat-paginator>
         </div>
-        <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
+        <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
             ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on top">
             Popover on top
-        </button>
+        </button> -->
     </div>
 </div>
