--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -1,64 +1,66 @@
-<div>
-    <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Exam Results</strong></div>
-    </div>
-    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <!-- <alert></alert> -->
-    <div style="padding: 15px;" fxLayout="row wrap">
-        <div style="width: 100%;">
-            <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline" style="width:150px">
-                    <mat-label>Exam</mat-label>
-                    <mat-select formControlName="searchExamId">
-                        <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
-                            {{item.ExamName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline" style="width:150px">
-                    <mat-label>Class</mat-label>
-                    <mat-select formControlName="searchClassId">
-                        <!-- <mat-option [value]="0">--class--</mat-option> -->
-                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
-                            {{item.ClassName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="outline" style="width:150px">
-                    <mat-label>Section</mat-label>
-                    <mat-select formControlName="searchSectionId">
-                    <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                        {{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>  
-                </mat-form-field>               
-                <button style="margin-right: 15px;" [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
-                    <mat-icon>search</mat-icon>
-                </button>
-                <button style="margin-right: 400px;" [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
-                    <mat-icon>clear_all</mat-icon>
-                </button>
-                <button [disabled]="loading" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0" mat-raised-button color="accent" (click)="Verified()">
-                    <mat-icon>checked</mat-icon>
-                </button>
-            </form>            
-
-            <mat-table #table [dataSource]="dataSource" matSort>                
-            
-                <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>
-                        {{disCol!='Action'?disCol:''}}                      
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">                        
-                       {{element[disCol]}}                                    
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
-                
-            </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
-        </div>
-
-    </div>
+<div style="padding:15px 15px 10px 15px;">
+    <div><strong>Exam Results</strong></div>
 </div>
+<mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
+<!-- <alert></alert> -->
+<!-- <div style="padding: 15px;" fxLayout="row wrap"> -->
+<form [formGroup]="searchForm">
+    <mat-form-field appearance="outline" style="width:150px">
+        <mat-label>Exam</mat-label>
+        <mat-select formControlName="searchExamId">
+            <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
+                {{item.ExamName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline" style="width:150px">
+        <mat-label>Class</mat-label>
+        <mat-select formControlName="searchClassId">
+            <!-- <mat-option [value]="0">--class--</mat-option> -->
+            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                {{item.ClassName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline" style="width:150px">
+        <mat-label>Section</mat-label>
+        <mat-select formControlName="searchSectionId">
+            <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                {{item.MasterDataName}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button style="margin-right: 15px;" [disabled]="loading" mat-raised-button color="accent"
+        (click)="GetExamStudentSubjectResults()">
+        <mat-icon>search</mat-icon>
+    </button>
+    <button style="margin-right: 400px;" [disabled]="loading" matTooltip="clear all" class="mat-raised-button"
+        (click)="clear()">
+        <mat-icon>clear_all</mat-icon>
+    </button>
+    <button [disabled]="loading" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0" mat-raised-button
+        color="accent" (click)="Verified()">
+        <mat-icon>checked</mat-icon>
+    </button>
+</form>
+<div style="width: 100%;">
+
+    <mat-table #table [dataSource]="dataSource" matSort>
+
+        <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{disCol!='Action'?disCol:''}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let element">
+                {{element[disCol]}}
+            </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+</div>
+
+<!-- </div>
+</div> -->
