--- a/src/app/modules/classes/classgroupmapping/classgroupmapping.component.html
+++ b/src/app/modules/classes/classgroupmapping/classgroupmapping.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div><strong>Student Grade</strong></div>
+        <div><strong>Class Grouping</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
@@ -8,74 +8,25 @@
         <div style="flex-direction: row;">
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Class group</mat-label>
-                <mat-select formControlName="searchClassGroupId" >
-                    <mat-option value="0">All</mat-option>
+                <mat-label>Class Group</mat-label>
+                <mat-select formControlName="searchClassGroupId">
                     <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">
                         {{item.MasterDataName}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentGrade()">
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetClassGroupMapping()">
                 <mat-icon>search</mat-icon>
             </button>
             </form>
         </div>
         <div style="width: 100%;">
             <mat-table style="overflow: auto;min-width: 60vw;min-height: 60vh;" #table [dataSource]="dataSource">
-                <ng-container matColumnDef="StudentGradeId">
+                <ng-container matColumnDef="ClassGroupMappingId">
                     <mat-header-cell *matHeaderCellDef>Id
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element.StudentGradeId}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="GradeName">
-                    <mat-header-cell *matHeaderCellDef>Grade
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <input autocomplete="Off" matInput (blur)="onBlur(element)" [value]="element.GradeName"
-                                [(ngModel)]="element.GradeName" [maxlength]="50">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Formula">
-                    <mat-header-cell *matHeaderCellDef>Formula
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <textarea matInput (blur)="onBlur(element)" [value]="element.Formula"
-                                [(ngModel)]="element.Formula" [maxlength]="256"></textarea>
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Sequence">
-                    <mat-header-cell *matHeaderCellDef>Sequence
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <input autocomplete="Off" matInput 
-                            type="number" 
-                            (blur)="onBlur(element)" 
-                            [value]="element.Sequence"
-                                [(ngModel)]="element.Sequence" [max]="30">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="GradeTypeId">
-                    <mat-header-cell *matHeaderCellDef>Grade Type
-                    </mat-header-cell>
-                    <mat-cell style="display: flex;" *matCellDef="let element">
-                        <mat-form-field appearance="outline">
-                            <mat-select 
-                            (selectionChange)="onBlur(element)"
-                            [value]="element.GradeTypeId" 
-                            [(ngModel)]="element.GradeTypeId">
-                                <mat-option *ngFor="let item of StudentGradeTypes" [value]="item.MasterDataId">
-                                    {{item.MasterDataName}}</mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                        {{element.ClassGroupMappingId}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ClassGroupId">
@@ -83,13 +34,25 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <mat-select 
+                            <mat-select [value]="element.ClassGroupId" 
                             (selectionChange)="onBlur(element)"
-                            [value]="element.ClassGroupId" 
                             [(ngModel)]="element.ClassGroupId">
-                                <mat-option value="0">All</mat-option>
                                 <mat-option *ngFor="let item of ClassGroups" [value]="item.MasterDataId">
                                     {{item.MasterDataName}}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="ClassId">
+                    <mat-header-cell *matHeaderCellDef>Class
+                    </mat-header-cell>
+                    <mat-cell style="display: flex;" *matCellDef="let element">
+                        <mat-form-field appearance="outline">
+                            <mat-select [value]="element.ClassId"
+                            (selectionChange)="onBlur(element)"
+                            [(ngModel)]="element.ClassId">
+                                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                                    {{item.ClassName}}</mat-option>
                             </mat-select>
                         </mat-form-field>
                     </mat-cell>
