--- a/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
+++ b/src/app/modules/classes/classsmastermapping/classmasterdashboard.component.html
@@ -1,6 +1,6 @@
 <div>
     <div style="padding:15px 15px 10px 15px;">
-        <div style="padding: 15px;"><strong>Class Master</strong></div>
+        <div style="padding: 15px;"><strong>Class Teacher</strong></div>
 
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <!-- <alert></alert> -->
