--- a/src/app/modules/schoolreports/result/result.component.html
+++ b/src/app/modules/schoolreports/result/result.component.html
@@ -17,8 +17,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Class</mat-label>
-                    <mat-select formControlName="searchClassId">
-                        <!-- <mat-option [value]="0">--class--</mat-option> -->
+                    <mat-select formControlName="searchClassId" (selectionChange)="GetSelectedClassStudentGrade()">
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
@@ -61,8 +60,8 @@
                 </mat-table>
             </span>
             <span style="margin-top: 15px;" fxLayout="row">
-                <button [disabled]="loading || ExamStudentResult.length ==0" matTooltip="print" printSectionId="printSection" [useExistingCss]="true"
-                    ngxPrint class="mat-raised-button">
+                <button [disabled]="loading || ExamStudentResult.length ==0" matTooltip="print"
+                    printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
                     <mat-icon>print</mat-icon>
                 </button>
                 <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
