--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -15,7 +15,8 @@
     </mat-form-field>
     <mat-form-field appearance="outline" style="width:150px">
         <mat-label>Class</mat-label>
-        <mat-select formControlName="searchClassId">
+        <mat-select formControlName="searchClassId"
+        (selectionChange)="GetStudentGrade()">
             <!-- <mat-option [value]="0">--class--</mat-option> -->
             <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                 {{item.ClassName}}
